--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/node": "24.0.10",
+    "@types/react": "19.1.8",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "typescript": "5.8.3"
   }
 }
